k8/deployment_azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      run: backend
  replicas: 1
  template:
    metadata:
      labels:
        run: backend
    spec:
      containers:
      - name: backend
        image: varasrinivas.azurecr.io/backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    run: backend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    run: backend
